--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>INFO2180 Lab 2</title>
+    <link rel = "stylesheet" type = "text/css" href = "style.css"/> 
 </head>
 <body>
     <h1>INFO2180 Lab 2</h1>
