--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>INFO2180 Lab 2</h1>
     <p>This is a webpage for Lab 2 of INFO2180.</p>
+    <img src = "https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjl7ui8yufkAhXsxlkKHcvFCmIQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.mattmorris.com%2Ftop-23-quotes-about-living-life-to-the-fullest%2F&psig=AOvVaw1lhRGsAcYHXtGTfkHZVJ3G&ust=1569349737321994" alt = "Life Quote" />
 </body>
 </html>
